# dev-rules-starter-kit

./: .constitution-all-tools-inventory.md  .constitution-config.yaml  .constitution-final-review.md  .constitution-phases-complete.md  .constitution-user-flows.md  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  AFTER_UNZIP_GUIDE.md  AGENTS.md  AI_AGENT_AUTO_INIT_SETUP.md  ANALYSIS_README.md  BATCH_RUN_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMMERCIALIZATION_READINESS_REPORT.md  COMPLETION_REPORT.md  COMPREHENSIVE_GAP_ANALYSIS.md  CONSTITUTION_IMPLEMENTATION_COMPLETE.md  CONSTITUTION_INTEGRATION_PROPOSAL.md  CONTINUATION_PLAN.md  DELIVERABLES_SUMMARY.md  DEVELOPMENT_RULES.md  Dockerfile  ENTERPRISE_QUICK_START.md  ENTERPRISE_READY.md  FLASK_APP_FIX.md  FOLDER_MOVE_WARNING.md  FUTURE_FEATURES.md  GEMINI.md  HANDOFF_REPORT.md  HANDOFF_SETUP.md  IMPROVEMENT_COMPLETION_REPORT.md  IMPROVEMENT_ROADMAP.md  LICENSE  MOVE_FOLDER_SIMPLE.md  NORTH_STAR.md  NO_ENV_VARS_NEEDED.md  (+47 more)
.claude/: NO_EMOJI_RULE.md  init.py  settings.local.json
.github/: CONSTITUTION_REVIEW_2025-01-24.md  PULL_REQUEST_TEMPLATE.md  TASK_TEMPLATE.md
MOCs/: PROJECT_NAME_개발_지식맵.md
RUNS/: CACHE_ARCHITECTURE.md  CONSTITUTION_IMPROVEMENT_REPORT_2025-10-29.md  DAY4_COMPLETION_REPORT.md  FINAL_IMPROVEMENT_REPORT_2025-10-30.md  P6_QUALITY_GATES_ANALYSIS.txt  PHASE_C_DAY3-4_SUMMARY.md  STRATEGY_B_COMPLETION_REPORT.md  VERIFICATION_CACHE_COMPLETION.md  advanced_integration_report.md  benchmark_results.txt  commit_summary.md  conflict_detection.json  constitution_v3_validation.json  constitutional_validation.json  degradation_state.json  error_learning_db.json  error_patterns_core.json  final_improvements_summary.md  framework_validation_result.json  learned_compression_patterns.json  multi_agent_improvements_report.md  prompt_compression_integration_summary.md  prompt_compression_validation_report.md  prompt_taskexecutor_integration_plan.md  session_analysis_report.json  session_management_implementation_summary.md  session_summary_2025-11-05.md  session_system_final_report.md  tdd_metrics.json  token_efficiency_analysis.json  tradeoff_analysis.json  user_scenario_analysis.md  verification_cache_example.py
TASKS/: ALLOW_WRITE_COMMANDS.yaml  CLEANUP-2025-10-31-03-documentation.yaml  DEMO-OBSIDIAN-SYNC.yaml  DOCS-2025-10-31-07-obsidian-devlog.yaml  DOCS-2025-10-31-11-productivity-tools-complete.yaml  GIT-HOOKS-2025-10-29.yaml  (+38 more)
(+31883 files in other folders)
